--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
 </head>
 
 <body class="bg-gray-50">
-
-
-
   <nav id="header" class="fixed w-full z-10 top-0">
     <div id="progress" class="h-1 z-20 top-0" style="
             background: linear-gradient(
@@ -66,7 +63,7 @@
           <a class="px-4 py-2 mt-2 text-black md:mt-0 md:ml-4 hover:underline" href="/contact">Contact</a>
           <div class="relative text-gray-600 bg-white flex items-center rounded-full">
             <form action="/search" method="get">
-            <input autofocus name="q" id="search" type="text" placeholder="Search..."  placeholder="Search" class="bg-white h-10 px-4 md:px-6 lg:px-8 rounded-full text-sm placeholder-green-600 focus:outline-none">
+            <input autofocus name="q" id="search" type="text" value="{{ .Query }}" placeholder="Search..."  placeholder="Search" class="bg-white h-10 px-4 md:px-6 lg:px-8 rounded-full text-sm placeholder-green-600 focus:outline-none">
             <button type="submit" class="absolute right-0 top-0 mt-3 mr-4">
               <svg class="h-4 w-4 fill-current text-green-600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
                 <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
@@ -85,6 +82,25 @@
   <p class="font-sans font-bold text-3xl leading-none mt-10 mb-5 md:mt-15 text-center text-green-500">Featured</p>
   <div class="flex flex-wrap justify-center">
 
+    <section class="container">
+      <ul class="search-results">
+        {{ range.Results.Articles }}
+        <li class="news-article">
+          <div>
+            <a target="_blank" rel="noreferrer noopener" href="{{.URL}}">
+              <h3 class="title">{{.Title }}</h3>
+            </a>
+            <p class="description">{{ .Description }}</p>
+            <div class="metadata">
+              <p class="source">{{ .Source.Name }}</p>
+              <time class="published-date">{{ .PublishedAt }}</time>
+            </div>
+          </div>
+          <img class="article-image" src="{{ .URLToImage }}" />
+        </li>
+        {{ end }}
+      </ul>
+    </section>
 
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/3">
       <div class="overflow-hidden bg-gray-50 md:bg-white rounded-lg md:shadow-lg">
